# OSLab2

./: .gitignore  CMakeLists.txt
include/: comunication.h  interface.h  vector.h
src/: CMakeLists.txt  comunication.cpp  interface.cpp  main.cpp
tests/communication/: CMakeLists.txt  comm.cpp
tests/interface/: CMakeLists.txt  avg.cpp  min_max.cpp
